# line-burn

./: Cargo.toml  README.md  cora.csv
src/: data.rs  lib.rs  model.rs  training.rs
